corrections du contenu Activités qui n'etais pas aligné correctement sur petit ecran.

--- a/View/styles.css
+++ b/View/styles.css
@@ -543,6 +543,7 @@ h3 {
 
   .Activites {
     flex-direction: column;
+    margin-left: 3vw;
   }
 
   .Activites .groupArticles {
@@ -550,7 +551,7 @@ h3 {
     height: 300px;
   }
   .Activites .containerSection {
-    width: 100%;
+    width: 89vw;
     height: 150px;
     margin-bottom: 1em;
   }
@@ -562,7 +563,7 @@ h3 {
 footer {
   display: flex;
 
-  width: 103vw;
+  width: 100vw;
   background-color: #f2f2f2;
   padding-top: 25px;
   padding-bottom: 25px;
@@ -592,6 +593,5 @@ footer {
 @media (max-width: 768px) {
   footer {
     flex-direction: column;
-    margin-left: -3vw;
   }
 }
